# jaraco.video

./: .hgignore  .hgtags  CHANGES.rst  CHANGES.txt  README  README.rst  README.txt  bitutil.py  conftest.py  directshowlib.py  pyproject.toml  setup.cfg  setup.py  vidcap.py  vidcap_com.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
gen_ds/: DexterLib.idl  DexterLib.tlb  gen_ds.py
jaraco/video/: bitutil.py  capture.py  util.py
jaraco/video/api/: __init__.py  objects.py
