[bdist_wheel]
universal = 1

[sdist]
formats = zip

[metadata]
license_file = LICENSE
name = jaraco.video
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = A pure-python framegrabber for Windows
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.video
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Operating System :: Microsoft :: Windows
	Topic :: Multimedia :: Video :: Capture

[options]
packages = find:
namespace_packages = jaraco
include_package_data = true
python_requires = >=2.7
install_requires =
	comtypes
	Pillow
	jaraco.structures
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	save-frame = jaraco.video.capture:save_frame
