[metadata]
license_files =
	LICENSE
name = jaraco.video
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = A pure-python framegrabber for Windows
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.video
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Operating System :: Microsoft :: Windows
	Topic :: Multimedia :: Video :: Capture

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	comtypes
	Pillow
	jaraco.structures
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	pytest-enabler

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	save-frame = jaraco.video.capture:save_frame
