[metadata]
name = jaraco.video
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = A pure-python framegrabber for Windows
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.video
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Operating System :: Microsoft :: Windows
	Topic :: Multimedia :: Video :: Capture

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	comtypes
	Pillow
	jaraco.structures

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3
	pytest-ruff

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	save-frame = jaraco.video.capture:save_frame
